tenants/jh-project/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    security.openshift.io/MinimallySufficientPodSecurityStandard: baseline
  labels:
    kubernetes.io/metadata.name: jh-project
    opendatahub.io/dashboard: 'true'
    openshift-pipelines.tekton.dev/namespace-reconcile-version: 1.22.3
    openshift-pipelines.tekton.dev/namespace-trusted-configmaps-version: 1.22.3
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
    tenant: jh-project
    tenant-network-zone: jh-project
  name: jh-project
spec:
  finalizers:
  - kubernetes
